Auto complete for Inputs sets off

--- a/src/app/pages/gold-calculator/gold-calculator.component.html
+++ b/src/app/pages/gold-calculator/gold-calculator.component.html
@@ -77,6 +77,7 @@
                         @if (goldValueComputed$ | async; as goldValue) {
                             <p class="input-unit-base">تومان</p>
                             <input
+                                autocomplete="off"
                                 maxlength="19"
                                 placeholder="0"
                                 [value]="goldValue"
@@ -95,7 +96,7 @@
                         <div class="relative w-full">
                             <p class="input-unit-base">{{ goldTypes[currentGoldType()].weightUnit }}</p>
                             @if (weightValue$ | async; as weightValue) {
-                                <input maxlength="16" placeholder="0" (input)="onWeightInputChange($event)" [value]="weightValue" type="text" commafyNumber class="input-base rtl">
+                                <input autocomplete="off" maxlength="16" placeholder="0" (input)="onWeightInputChange($event)" [value]="weightValue" type="text" commafyNumber class="input-base rtl">
                             }
                         </div>
                     </div>
@@ -113,7 +114,7 @@
                         <div class="relative w-full">
                             <p class="input-unit-base">درصد</p>
                             @if (wageValue$ | async; as wageValue) {
-                                <input maxlength="16" placeholder="0" [value]="wageValue" (input)="onWageInputChange($event)" type="text" commafyNumber class="input-base rtl">
+                                <input autocomplete="off" maxlength="16" placeholder="0" [value]="wageValue" (input)="onWageInputChange($event)" type="text" commafyNumber class="input-base rtl">
                             }
                         </div>
                     </div>
@@ -132,7 +133,7 @@
                     <div class="relative w-full">
                         <p class="input-unit-base">درصد</p>
                         @if (taxValue$ | async; as taxValue) {
-                            <input maxlength="16" placeholder="0" [value]="taxValue" (input)="onTaxInputChange($event)" type="text" commafyNumber class="input-base rtl">
+                            <input autocomplete="off" maxlength="16" placeholder="0" [value]="taxValue" (input)="onTaxInputChange($event)" type="text" commafyNumber class="input-base rtl">
                         }
                     </div>
                 </div>
@@ -150,7 +151,7 @@
                     <div class="relative w-full">
                         <p class="input-unit-base">{{ profitType() === 0 ? 'درصد' : 'تومان' }}</p>
                         @if (profitValue$ | async; as profitValue) {
-                            <input maxlength="16" placeholder="0" [value]="profitValue" (input)="onProfitInputChange($event)" type="text" commafyNumber class="input-base rtl">
+                            <input autocomplete="off" maxlength="16" placeholder="0" [value]="profitValue" (input)="onProfitInputChange($event)" type="text" commafyNumber class="input-base rtl">
                         }
                     </div>
                 </div>
@@ -197,7 +198,7 @@
                     <div class="relative w-full">
                         <p class="input-unit-base">{{ ounceTypes[currentOunceType()].title }}</p>
                         @if (weightValue$ | async; as weightValue) {
-                            <input maxlength="16" placeholder="0" [value]="weightValue" commafyNumber (input)="onWeightInputChange($event)" type="text" commafyNumber class="input-base rtl">
+                            <input autocomplete="off" maxlength="16" placeholder="0" [value]="weightValue" commafyNumber (input)="onWeightInputChange($event)" type="text" commafyNumber class="input-base rtl">
                         }
                     </div>
                 </div>
