--- a/src/app/components/shared/header/header.component.html
+++ b/src/app/components/shared/header/header.component.html
@@ -1,37 +1,38 @@
 <header class="fixed z-[3] bg-light2 dark:bg-dark2 w-full h-16 flex items-center justify-between border-b border-b-light-border3 dark:border-b-dark-border3 mx-auto px-4 lg:px-18 xl:px-41">
     <div class="w-6 h-6 cursor-pointer overflow-hidden" (click)="changeTheme()">
-        @if (themeService.getStringTheme() === 'light') {
-            <svg
-                class="fill-dark-text dark:fill-light-text hover:fill-light-green-text hover:dark:fill-dark-green-text"
-                version="1.1" id="Capa_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" 
-                viewBox="0 0 81.289 81.289"
-                xml:space="preserve">
-                <g>
-                    <path d="M79.248,38.668c-1.246-0.464-2.669-0.088-3.518,0.95c-4.791,5.84-11.858,9.192-19.403,9.192
-                        c-13.833,0-25.083-11.255-25.083-25.083c0-6.963,2.808-13.441,7.908-18.242c0.977-0.918,1.26-2.357,0.705-3.579
-                        c-0.552-1.222-1.818-1.959-3.157-1.826C15.778,2.112,0,19.511,0,40.555c0,22.424,18.245,40.669,40.672,40.669
-                        c22.16,0,40.002-17.363,40.616-39.528C81.324,40.355,80.508,39.136,79.248,38.668z M40.671,74.953
-                        c-18.971,0-34.402-15.43-34.402-34.4c0-14.93,9.389-27.69,22.859-32.43c-2.714,4.689-4.156,10.022-4.156,15.605
-                        c0,17.292,14.065,31.355,31.357,31.355c6.317,0,12.373-1.882,17.479-5.322C69.82,64.399,56.557,74.953,40.671,74.953z"/>
-                </g>
-            </svg>
-        }
-        @else if (themeService.getStringTheme() === 'dark') {
-            <svg
-                class="w-6 h-6 fill-dark-text dark:fill-light-text hover:fill-light-green-text hover:dark:fill-dark-green-text"
-                viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg"
-            >
-                <path fill-rule="evenodd" clip-rule="evenodd" d="M12 7.11628C9.3028 7.11628 7.11628 9.3028 7.11628 12C7.11628 14.6972 9.3028 16.8837 12 16.8837C14.6972 16.8837 16.8837 14.6972 16.8837 12C16.8837 9.3028 14.6972 7.11628 12 7.11628ZM5.72093 12C5.72093 8.53217 8.53217 5.72093 12 5.72093C15.4678 5.72093 18.2791 8.53217 18.2791 12C18.2791 15.4678 15.4678 18.2791 12 18.2791C8.53217 18.2791 5.72093 15.4678 5.72093 12Z"/>
-                <path fill-rule="evenodd" clip-rule="evenodd" d="M12 2C12.3853 2 12.6977 2.31236 12.6977 2.69767V3.62791C12.6977 4.01322 12.3853 4.32558 12 4.32558C11.6147 4.32558 11.3023 4.01322 11.3023 3.62791V2.69767C11.3023 2.31236 11.6147 2 12 2Z"/>
-                <path fill-rule="evenodd" clip-rule="evenodd" d="M12 19.6744C12.3853 19.6744 12.6977 19.9868 12.6977 20.3721V21.3023C12.6977 21.6876 12.3853 22 12 22C11.6147 22 11.3023 21.6876 11.3023 21.3023V20.3721C11.3023 19.9868 11.6147 19.6744 12 19.6744Z"/>
-                <path fill-rule="evenodd" clip-rule="evenodd" d="M22 12C22 12.3853 21.6876 12.6977 21.3023 12.6977H20.3721C19.9868 12.6977 19.6744 12.3853 19.6744 12C19.6744 11.6147 19.9868 11.3023 20.3721 11.3023H21.3023C21.6876 11.3023 22 11.6147 22 12Z"/>
-                <path fill-rule="evenodd" clip-rule="evenodd" d="M4.32558 12C4.32558 12.3853 4.01322 12.6977 3.62791 12.6977H2.69767C2.31236 12.6977 2 12.3853 2 12C2 11.6147 2.31236 11.3023 2.69767 11.3023H3.62791C4.01322 11.3023 4.32558 11.6147 4.32558 12Z"/>
-                <path fill-rule="evenodd" clip-rule="evenodd" d="M19.0711 4.92893C19.3435 5.20139 19.3435 5.64313 19.0711 5.91559L18.4133 6.57337C18.1408 6.84583 17.6991 6.84583 17.4266 6.57337C17.1542 6.30091 17.1542 5.85916 17.4266 5.58671L18.0844 4.92893C18.3569 4.65647 18.7986 4.65647 19.0711 4.92893Z"/>
-                <path fill-rule="evenodd" clip-rule="evenodd" d="M6.57337 17.4266C6.84583 17.6991 6.84583 18.1408 6.57337 18.4133L5.91559 19.0711C5.64313 19.3435 5.20139 19.3435 4.92893 19.0711C4.65647 18.7986 4.65647 18.3569 4.92893 18.0844L5.58671 17.4266C5.85916 17.1542 6.30091 17.1542 6.57337 17.4266Z"/>
-                <path fill-rule="evenodd" clip-rule="evenodd" d="M19.0711 19.0711C18.7986 19.3435 18.3569 19.3435 18.0844 19.0711L17.4266 18.4133C17.1542 18.1408 17.1542 17.6991 17.4266 17.4266C17.6991 17.1542 18.1408 17.1542 18.4133 17.4266L19.0711 18.0844C19.3435 18.3569 19.3435 18.7986 19.0711 19.0711Z"/>
-                <path fill-rule="evenodd" clip-rule="evenodd" d="M6.57337 6.57337C6.30091 6.84583 5.85917 6.84583 5.58671 6.57337L4.92893 5.91559C4.65647 5.64313 4.65647 5.20139 4.92893 4.92893C5.20139 4.65647 5.64313 4.65647 5.91559 4.92893L6.57337 5.58671C6.84583 5.85916 6.84583 6.30091 6.57337 6.57337Z"/>
-            </svg>
-        }
+        <svg
+            class="w-6 h-6 theme-icon theme-icon-sun fill-dark-text dark:fill-light-text hover:fill-light-green-text hover:dark:fill-dark-green-text"
+            viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg"
+        >
+            <path fill-rule="evenodd" clip-rule="evenodd" d="M12 7.11628C9.3028 7.11628 7.11628 9.3028 7.11628 12C7.11628 14.6972 9.3028 16.8837 12 16.8837C14.6972 16.8837 16.8837 14.6972 16.8837 12C16.8837 9.3028 14.6972 7.11628 12 7.11628ZM5.72093 12C5.72093 8.53217 8.53217 5.72093 12 5.72093C15.4678 5.72093 18.2791 8.53217 18.2791 12C18.2791 15.4678 15.4678 18.2791 12 18.2791C8.53217 18.2791 5.72093 15.4678 5.72093 12Z"/>
+            <path fill-rule="evenodd" clip-rule="evenodd" d="M12 2C12.3853 2 12.6977 2.31236 12.6977 2.69767V3.62791C12.6977 4.01322 12.3853 4.32558 12 4.32558C11.6147 4.32558 11.3023 4.01322 11.3023 3.62791V2.69767C11.3023 2.31236 11.6147 2 12 2Z"/>
+            <path fill-rule="evenodd" clip-rule="evenodd" d="M12 19.6744C12.3853 19.6744 12.6977 19.9868 12.6977 20.3721V21.3023C12.6977 21.6876 12.3853 22 12 22C11.6147 22 11.3023 21.6876 11.3023 21.3023V20.3721C11.3023 19.9868 11.6147 19.6744 12 19.6744Z"/>
+            <path fill-rule="evenodd" clip-rule="evenodd" d="M22 12C22 12.3853 21.6876 12.6977 21.3023 12.6977H20.3721C19.9868 12.6977 19.6744 12.3853 19.6744 12C19.6744 11.6147 19.9868 11.3023 20.3721 11.3023H21.3023C21.6876 11.3023 22 11.6147 22 12Z"/>
+            <path fill-rule="evenodd" clip-rule="evenodd" d="M4.32558 12C4.32558 12.3853 4.01322 12.6977 3.62791 12.6977H2.69767C2.31236 12.6977 2 12.3853 2 12C2 11.6147 2.31236 11.3023 2.69767 11.3023H3.62791C4.01322 11.3023 4.32558 11.6147 4.32558 12Z"/>
+            <path fill-rule="evenodd" clip-rule="evenodd" d="M19.0711 4.92893C19.3435 5.20139 19.3435 5.64313 19.0711 5.91559L18.4133 6.57337C18.1408 6.84583 17.6991 6.84583 17.4266 6.57337C17.1542 6.30091 17.1542 5.85916 17.4266 5.58671L18.0844 4.92893C18.3569 4.65647 18.7986 4.65647 19.0711 4.92893Z"/>
+            <path fill-rule="evenodd" clip-rule="evenodd" d="M6.57337 17.4266C6.84583 17.6991 6.84583 18.1408 6.57337 18.4133L5.91559 19.0711C5.64313 19.3435 5.20139 19.3435 4.92893 19.0711C4.65647 18.7986 4.65647 18.3569 4.92893 18.0844L5.58671 17.4266C5.85916 17.1542 6.30091 17.1542 6.57337 17.4266Z"/>
+            <path fill-rule="evenodd" clip-rule="evenodd" d="M19.0711 19.0711C18.7986 19.3435 18.3569 19.3435 18.0844 19.0711L17.4266 18.4133C17.1542 18.1408 17.1542 17.6991 17.4266 17.4266C17.6991 17.1542 18.1408 17.1542 18.4133 17.4266L19.0711 18.0844C19.3435 18.3569 19.3435 18.7986 19.0711 19.0711Z"/>
+            <path fill-rule="evenodd" clip-rule="evenodd" d="M6.57337 6.57337C6.30091 6.84583 5.85917 6.84583 5.58671 6.57337L4.92893 5.91559C4.65647 5.64313 4.65647 5.20139 4.92893 4.92893C5.20139 4.65647 5.64313 4.65647 5.91559 4.92893L6.57337 5.58671C6.84583 5.85916 6.84583 6.30091 6.57337 6.57337Z"/>
+        </svg>
+
+
+        <svg
+            class="fill-dark-text theme-icon theme-icon-moon dark:fill-light-text hover:fill-light-green-text hover:dark:fill-dark-green-text"
+            version="1.1" id="Capa_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" 
+            viewBox="0 0 81.289 81.289"
+            xml:space="preserve">
+            <g>
+                <path d="M79.248,38.668c-1.246-0.464-2.669-0.088-3.518,0.95c-4.791,5.84-11.858,9.192-19.403,9.192
+                    c-13.833,0-25.083-11.255-25.083-25.083c0-6.963,2.808-13.441,7.908-18.242c0.977-0.918,1.26-2.357,0.705-3.579
+                    c-0.552-1.222-1.818-1.959-3.157-1.826C15.778,2.112,0,19.511,0,40.555c0,22.424,18.245,40.669,40.672,40.669
+                    c22.16,0,40.002-17.363,40.616-39.528C81.324,40.355,80.508,39.136,79.248,38.668z M40.671,74.953
+                    c-18.971,0-34.402-15.43-34.402-34.4c0-14.93,9.389-27.69,22.859-32.43c-2.714,4.689-4.156,10.022-4.156,15.605
+                    c0,17.292,14.065,31.355,31.357,31.355c6.317,0,12.373-1.882,17.479-5.322C69.82,64.399,56.557,74.953,40.671,74.953z"/>
+            </g>
+        </svg>
+        
+        <i class="bi text-center align-middle text-xl bi-display theme-icon theme-icon-system text-dark-text dark:text-light-text hover:text-light-green-text hover:dark:text-dark-green-text"></i>
+        
 
     </div>
     <div class="h-full flex items-center gap-4 md:gap-10">
