--- a/src/styles.css
+++ b/src/styles.css
@@ -93,6 +93,13 @@
 
 }
 
+.theme-icon { display: none !important; }
+
+/* نمایش آیکون مربوطه بر اساس اتریبیوت html */
+html[data-mode="light"] .theme-icon-sun { display: block !important; }
+html[data-mode="dark"] .theme-icon-moon { display: block !important; }
+html[data-mode="system"] .theme-icon-system { display: block !important; }
+
 #chartContainer * {
     font-family: 'IranYekan';
 }
