System theme mode icon changed

--- a/src/app/components/shared/header/header.component.html
+++ b/src/app/components/shared/header/header.component.html
@@ -31,7 +31,7 @@
             </g>
         </svg>
         
-        <i class="bi text-center align-middle text-xl bi-display theme-icon theme-icon-system text-dark-text dark:text-light-text hover:text-light-green-text hover:dark:text-dark-green-text"></i>
+        <i class="bi text-center align-middle text-xl bi-circle-half theme-icon theme-icon-system text-dark-text dark:text-light-text hover:text-light-green-text hover:dark:text-dark-green-text"></i>
         
 
     </div>
