--- a/src/app/components/shared/header/header.component.html
+++ b/src/app/components/shared/header/header.component.html
@@ -17,7 +17,7 @@
 
 
         <svg
-            class="fill-dark-text theme-icon theme-icon-moon dark:fill-light-text hover:fill-light-green-text hover:dark:fill-dark-green-text"
+            class="w-6 h-6 scale-75 fill-dark-text theme-icon theme-icon-moon dark:fill-light-text hover:fill-light-green-text hover:dark:fill-dark-green-text"
             version="1.1" id="Capa_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" 
             viewBox="0 0 81.289 81.289"
             xml:space="preserve">
